Refined the Register and Login pages

--- a/SwiftCart.csproj
+++ b/SwiftCart.csproj
@@ -8,6 +8,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\images\Product\**" />
+    <Content Remove="wwwroot\images\Product\**" />
+    <EmbeddedResource Remove="wwwroot\images\Product\**" />
+    <None Remove="wwwroot\images\Product\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.2" />
@@ -16,7 +23,6 @@
 
   <ItemGroup>
     <Folder Include="ViewModels\" />
-    <Folder Include="wwwroot\images\Product\" />
   </ItemGroup>
 
 </Project>
